kubernetes/manifests/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample
  name: sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
      - image: arboulahdour/sample:1.0.0
        imagePullPolicy: IfNotPresent
        name: sample
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: sample
  name: sample
spec:
  ports:
  - port: 8080
    protocol: TCP
    nodePort: 30080
    targetPort: 8080
  selector:
    app: sample
  type: LoadBalancer
status:
  loadBalancer: {}
